<resources>
    <string name="app_name">Navigation Activity</string>
    <string name="title_camera">Camera</string>
    <string name="title_editor">Editor</string>
    <string name="title_ruler">Ruler</string>
    <string name="title_process">Process</string>
    <string name="title_gallery">Gallery</string>
    <string name="set_ratio">Length: </string>
    <string name="title_credit">Credit</string>
    <string name="title_login">Login</string>
    <string name="title_logout">Logout</string>
    <string name="title_tutorial">Tutorial</string>
    <string name="title_app">S.I.M.P</string>
    <string name="full_name_app">Sketching Intricately and Measuring Portability</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="ratio_measure">
        <item>MM</item>
        <item>CM</item>
        <item>M</item>
    </string-array>
    <integer-array name="icon_list">
        <item>@drawable/line_tool_icon</item>
        <item>@drawable/eraser_tool_icon</item>
        <item>@drawable/text_tool_icon</item>
        <item>@drawable/ratio_tool_icon</item>
        <item>@drawable/move_tool_icon</item>
        <item>@drawable/zoom_tool_icon</item>
    </integer-array>
    <string-array name="language_list">
        <item>English</item>
        <item>Tiếng Việt</item>
    </string-array>
    <string-array name="theme_list">
        <item>Cyberpunk</item>
        <item>Oldschool</item>
    </string-array>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="process_button_alt">Process</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>

    <string name="dialog_set_ratio_text">Enter Line\'s length: </string>
    <string name="dialog_set_ratio_title">Set Ratio</string>
    <string name="dialog_user_help_title">Tool\'s Description</string>
    <string name="dialog_set_text_tittle">Enter Text</string>

    <string name="starting_menu_login">Log In</string>
    <string name="starting_menu_without_login">Continue Without Login</string>
    <string name="starting_menu_tutorial">Tutorial</string>
    <string name="starting_menu_setting">Setting</string>
    <string name="starting_menu_credit">Credit</string>

    <string name="credit_1">Trung-Nhan Trương</string>
    <string name="credit_2">Minh-Ky Nguyen</string>
    <string name="credit_school">University of Science, Ho Chi Minh City</string>
    <string name="credit_time">2020</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_without_account"><u>continue without login<br/>(guest)</u></string>
    <string name="credit_author_1">Author 1</string>
    <string name="main_login">Login</string>
    <string name="main_start">Start</string>
    <string name="starting_menu_logout">Logout</string>
    <string name="title_setting">Setting</string>
    <string name="setting_language">Language</string>
    <string name="setting_theme">Theme</string>
    <string name="title_signup">Sign Up</string>
    <string name="starting_menu_signup">Sign Up</string>
    <string name="login_name">name</string>
</resources>