<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_camera">

    <action
        android:id="@+id/actionGlobal_toCamera"
        app:destination="@+id/navigation_camera"
        app:enterAnim="@anim/fragment_fade_enter"
        app:exitAnim="@anim/fragment_fade_exit" 
	    app:popUpTo="@+id/navigation_camera"
        app:popUpToInclusive="true"/>
    <action
        android:id="@+id/actionGlobal_toEditor"
        app:destination="@+id/navigation_editor"
        app:enterAnim="@anim/fragment_fade_enter"
        app:exitAnim="@anim/fragment_fade_exit" 
	    app:popUpTo="@+id/navigation_editor"
        app:popUpToInclusive="true"/>
    <action
        android:id="@+id/actionGlobal_toRuler"
        app:destination="@+id/navigation_ruler"
        app:enterAnim="@anim/fragment_fade_enter"
        app:exitAnim="@anim/fragment_fade_exit" 
      	app:popUpTo="@+id/navigation_ruler"
        app:popUpToInclusive="true"/>
    <action
        android:id="@+id/actionGlobal_toProcess"
        app:destination="@+id/navigation_process"
        app:enterAnim="@anim/fragment_fade_enter"
        app:exitAnim="@anim/fragment_fade_exit" />
  
    <fragment
        android:id="@+id/navigation_editor"
        android:name="com.example.bottomnavigationactivity.ui.editor.EditorFragment"
        android:label="@string/title_editor"
        tools:layout="@layout/fragment_editor" />

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.example.bottomnavigationactivity.ui.gallery.GalleryFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.bottomnavigationactivity.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera">
        <action
            android:id="@+id/actionCamera_toGallery"
            app:destination="@id/navigation_gallery" />
        <action
            android:id="@+id/actionCamera_toPermissions"
            app:destination="@id/navigation_permission"
            app:popUpTo="@id/navigation_camera"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_permission"
        android:name="com.example.bottomnavigationactivity.ui.camera.PermissionFragment"
        android:label="Permission" >

        <action
            android:id="@+id/actionPermissions_toCamera"
            app:destination="@id/navigation_camera"
            app:popUpTo="@id/navigation_permission"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/navigation_ruler"
        android:name="com.example.bottomnavigationactivity.ui.ruler.RulerFragment"
        android:label="@string/title_ruler"
        tools:layout="@layout/fragment_ruler" />

    <fragment
        android:id="@+id/navigation_process"
        android:name="com.example.bottomnavigationactivity.ui.process.ProcessFragment"
        android:label="@string/title_process"
        tools:layout="@layout/fragment_process" />
</navigation>