<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_white"
        android:background="@android:color/transparent"
        android:layout_margin="@dimen/margin_xsmall"
        android:id="@+id/image_button_back"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_title"
        android:text="@string/title_login"
        android:textSize="70sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_margin="@dimen/margin_large"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/edit_text_username"
        android:layout_below="@id/text_view_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_large"
        android:ems="10"
        android:hint="@string/login_username"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/ic_baseline_adb_24"
        android:layout_marginBottom="@dimen/margin_xsmall"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/edit_text_password"
        android:layout_below="@id/edit_text_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_xsmall"
        android:ems="10"
        android:hint="@string/login_password"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:inputType="textPassword"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_below="@id/edit_text_password"
        android:id="@+id/linear_layout_login">
        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            android:layout_margin="@dimen/margin_xsmall"
            android:id="@+id/card_view_login">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_background_1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="25sp"
                    android:layout_margin="@dimen/margin_xxsmall"
                    android:text="@string/starting_menu_login"
                    android:gravity="center"
                    android:textColor="@color/white"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/linear_layout_login"
        android:textSize="20sp"
        android:layout_margin="@dimen/margin_xsmall"
        android:text="@string/login_without_account"
        android:id="@+id/text_view_without_login"
        android:textColor="@color/white"/>

</RelativeLayout>