<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:orientation="vertical">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_white"
            android:background="@android:color/transparent"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:layout_marginLeft="@dimen/margin_xsmall"
            android:id="@+id/image_button_back"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/starting_menu_credit"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="70sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:cardCornerRadius="35dp"
            app:cardElevation="10dp"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:id="@+id/card_view_credit_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_background_1">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginRight="@dimen/margin_xsmall"
                    android:layout_marginLeft="@dimen/margin_xsmall"
                    android:layout_marginTop="@dimen/margin_xsmall"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/author_1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="@dimen/margin_xxsmall"
                    android:text="@string/credit_1"
                    android:gravity="center"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:cardCornerRadius="35dp"
            app:cardElevation="10dp"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:id="@+id/card_view_credit_2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_background_1">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginRight="@dimen/margin_xsmall"
                    android:layout_marginLeft="@dimen/margin_xsmall"
                    android:layout_marginTop="@dimen/margin_xsmall"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/author_2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="@dimen/margin_xxsmall"
                    android:text="@string/credit_2"
                    android:gravity="center"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            app:cardCornerRadius="35dp"
            app:cardElevation="10dp"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:id="@+id/card_view_credit_project"
            app:layout_constraintTop_toBottomOf="@id/card_view_credit_1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_background_1">
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginRight="@dimen/margin_xsmall"
                    android:layout_marginLeft="@dimen/margin_xsmall"
                    android:layout_marginTop="@dimen/margin_small"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/school_icon"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_margin="@dimen/margin_xsmall"
                    android:text="@string/credit_school"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/white"
                    android:id="@+id/text_view_school"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>